@@ -1,5 +1,8 @@
 /*
  * $Log: constmap.h,v $
+ * Revision 1.5  2020-11-26 13:48:52+05:30  Cprogrammer
+ * added constmap_index(), constmap_get() functions
+ *
  * Revision 1.4  2020-05-15 11:37:12+05:30  Cprogrammer
  * define function prototypes as extern
  *
@@ -15,19 +18,23 @@
 
 typedef unsigned long constmap_hash;
 
-struct constmap
-{
-	int             num;
-	constmap_hash   mask;
-	constmap_hash  *hash;
-	int            *first;
-	int            *next;
-	char          **input;
-	int            *inputlen;
+struct constmap_entry {
+	const char     *input;
+	int             inputlen;
+	constmap_hash   hash;
+	int             next;
 };
 
-extern int      constmap_init(struct constmap *, char *, unsigned int, int);
-extern void     constmap_free(struct constmap *);
-extern char    *constmap(struct constmap *, char *, unsigned int);
+struct constmap {
+	unsigned int    num;
+	constmap_hash   mask;
+	int            *first;
+	struct constmap_entry *entries;
+};
 
+extern int      constmap_init(struct constmap *cm, const char *s, int len, int splitchar);
+extern void     constmap_free(struct constmap *cm);
+extern const char *constmap(struct constmap *cm, const char *s, int len);
+extern const char *constmap_get(struct constmap *cm, unsigned int idx);
+extern int      constmap_index(const struct constmap *cm, const char *s, int len);
 #endif
